Customized my profile

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
         </div>
         <div class="profile-description">
           <h2>About me!</h2>
-          <p><strong>Hi, I'm Shruthi.</strong> With a passion for fostering growth and learning, I am a dedicated
-            educator who has embarked on an exciting
-            journey to pivot to a front-end developer. My background in teaching has equipped me with strong
-            communication
-            skills, a knack for problem-solving, and a deep understanding of user-centric design principles. I am now
-            harnessing my creativity and technical aptitude to craft captivating and user-friendly web experiences,
-            blending my pedagogical expertise with coding prowess to create innovative digital solutions that engage and
-            inspire. Eager to embrace this new chapter, I am committed to continuous learning and contributing to the
-            ever-evolving world of web development.</p>
+          <p><strong>Hello World! I'm Shruthi.</strong> Your front-end enthusiast still riding the
+            coding learning curve! Embracing every challenge as an opportunity to grow, I'm determined to transform
+            my coding journey into an exciting exploration of endless possibilities. From wrestling with new concepts to
+            turning "uh-oh" moments into "aha" victories, I'm your friendly coder-next-door, navigating the wonderful
+            world of front-end with
+            wide-eyed excitement. <br><br>
+            Let's learn, code, and create together—because the best magic happens when you're
+            still in the spellbook!  <br>#LearningFrontEnd #CodeAdventures
+          </p>
         </div>
       </div>
     </article>
