Added a new hashtag #NewCoderInTown

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             world of front-end with
             wide-eyed excitement. <br><br>
             Let's learn, code, and create together—because the best magic happens when you're
-            still in the spellbook!  <br>#LearningFrontEnd #CodeAdventures
+            still in the spellbook!  <br>#CodeAdventures #NewCoderInTown
           </p>
         </div>
       </div>
